unpackaged/main/default/objects/Dropbox_Sign_Signature__c/Dropbox_Sign_Signature__c.object-meta.xml
<CustomObject>
    <label>Dropbox Sign Signature</label>
    <nameField>
        <displayFormat>DBS-{0000}</displayFormat>
        <label>Dropbox Sign Signature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dropbox Sign Signatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>