unpackaged/main/default/objects/Dropbox_Sign_Signature__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dropbox Sign Signatures</relationshipLabel>
    <relationshipName>Dropbox_Sign_Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>