unpackaged/main/default/objects/Dropbox_Sign_Signature__c/fields/Recipient_Role__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient (Role)</label>
    <referenceTo>litify_pm__Role__c</referenceTo>
    <relationshipLabel>Dropbox Sign Signatures</relationshipLabel>
    <relationshipName>Dropbox_Sign_Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>