unpackaged/main/default/objects/Dropbox_Sign_Signature__c/fields/Signature_ID__c.field-meta.xml
<CustomField>
    <fullName>Signature_ID__c</fullName>
    <externalId>true</externalId>
    <label>Signature ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>